[project]
name = "hexmap"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "tabulate>=0.9",
]

[project.scripts]
hexfiller = "hexmap.hexfiller:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hexmap"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
